name: scratch
build-type:          Custom
cabal-version:       >=1.10
version:             1.0

library
  hs-source-dirs:      src
  exposed-modules:     Lib.AnyList
                     , Lib.Contra
                     , Lib.DeleteIndices
                     , Lib.Exist
                     , Lib.LiftIo
                     , Lib.MaybeEither
                     , Lib.NQueens
                     , Lib.Planets
                     , Lib.Sanj
                     , Lib.Yeshql
  build-depends:       base >= 4.8 && < 5
                     , contravariant
                     , containers
                     , lens
                     , mtl
                     , transformers
  default-language:    Haskell2010
