name: scratch
build-type:          Custom
cabal-version:       1.12
version:             1.0

library
  hs-source-dirs:      src
  exposed-modules:     Lib.AnyList
                     , Lib.Contra
                     , Lib.DeleteIndices
                     , Lib.Exist
                     , Lib.LiftIo
                     , Lib.MaybeEither
                     , Lib.NQueens
                     , Lib.Sanj
                     , Lib.Smawk
  build-depends:       base >= 4.9 && < 5
                     , containers
                     , lens
                     , mtl
                     , primitive
                     , semigroupoids
                     , transformers
  default-language:    Haskell2010
